cabal-version: 2.2
name:          X11-xft
version:       0.3.3
license:       BSD-3-Clause
license-file:  LICENSE
author:        Clemens Fruhwirth
maintainer:    xmonad@haskell.org
category:      Graphics
synopsis:      Bindings to the Xft and some Xrender parts
description:   A Haskell bindings to the X Font library. With it, Haskell X11
               applications can access high quality font renderings and provide
               fonts with anti-aliasing and subpixel rendering. The bindings
               also provide minimal bindings to Xrender parts.
build-type:    Simple

library
  build-depends:     base         < 5
                   , X11         >= 1.2.1
                   , utf8-string >= 0.1
  ghc-options:       -funbox-strict-fields
  pkgconfig-depends: xft
  other-extensions:  ForeignFunctionInterface
  exposed-modules:   Graphics.X11.Xft, Graphics.X11.Xrender
  default-language:  Haskell98

source-repository head
  type:     git
  location: https://github.com/xmonad/X11-xft.git
