cabal-version: 1.24
name:          X11-xft
version:       0.3.4
license:       BSD3
license-file:  LICENSE
author:        Clemens Fruhwirth
maintainer:    xmonad@haskell.org
category:      Graphics
synopsis:      Bindings to the Xft and some Xrender parts
description:   A Haskell bindings to the X Font library. With it, Haskell X11
               applications can access high quality font renderings and provide
               fonts with anti-aliasing and subpixel rendering. The bindings
               also provide minimal bindings to Xrender parts.
build-type:    Simple
tested-with:   GHC == 8.0.2 || == 8.2.2 || == 8.4.4 || == 8.6.5 || == 8.8.4 || == 8.10.7 || == 9.0.2 || == 9.2.8 || == 9.4.8 || == 9.6.5 || == 9.8.2
extra-source-files: CHANGES.md
                    README.md

flag pedantic
  description: Be pedantic (-Werror and the like)
  default:     False
  manual:      True

library
  build-depends:     base        >= 4.9.0.0 && < 5
                   , X11         >= 1.2.1
                   , utf8-string >= 0.1
  ghc-options:       -funbox-strict-fields -Wall -fno-warn-unused-binds
  pkgconfig-depends: xft
  other-extensions:  ForeignFunctionInterface
  exposed-modules:   Graphics.X11.Xft, Graphics.X11.Xrender
  default-language:  Haskell98

  if flag(pedantic)
    ghc-options:      -Werror

source-repository head
  type:     git
  location: https://github.com/xmonad/X11-xft.git
